Fix width on compare to enable 2 on mobile

--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -1,4 +1,5 @@
 $column-width: 235px;
+$column-width-mobile: 48%;
 
 $min-with-separate-search-box: 800px;
 
